--- a/charta/templates/charta/index.html
+++ b/charta/templates/charta/index.html
@@ -7,12 +7,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Hello Django on Render!</title>
+    <title>Propagatio</title>
 
-    <link rel="stylesheet"
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- <link rel="stylesheet"
           href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
           integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk"
-          crossorigin="anonymous">
+          crossorigin="anonymous"> -->
 </head>
 <body>
 <header class="container mt-4 mb-4">
@@ -23,9 +26,50 @@
 <main class="container">
     <div class="row text-center justify-content-center">
         <div class="col">
-            <h1 class="display-4">Hello World!</h1>
+            <h1 class="display-4">Generate Stat JSON!</h1>
+        </div>
+    </div>
+
+    <div class="row text-center justify-content-center">
+        <div class="col">
+            <form method="post">
+                {% csrf_token %}
+                <div class="input-group">
+                    <span class="input-group-text">Enter Weeks:</span>
+                    <input class="form-control" id="num_week" name="num_week" type="number" value="4"/>
+                    <button type="submit" class="btn btn-success" name="run_script">Generate</button>
+                </div>
+            </form>
+        </div>
+    </div>
+
+    <div class="row text-center justify-content-center mt-2">
+        <div class="col">
+            <button class="btn btn-primary" onclick="copyText_cb()">Copy</button>
+        </div>
+    </div>
+
+    <div class="row text-center justify-content-center mt-2">
+        <div class="col">
+            <textarea class="form-control" id="output" style="width: 100%; height: 60vh">{{ output }}</textarea>
         </div>
     </div>
 </main>
 </body>
+<script>
+    function copyText_cb() {
+        /* Get the text field */
+        var copyText = document.getElementById("output");
+
+        /* Select the text field */
+        copyText.select();
+        copyText.setSelectionRange(0, 99999); /* For mobile devices */
+
+        /* Copy the text inside the text field */
+        navigator.clipboard.writeText(copyText.value);
+
+        /* Alert the copied text */
+        alert("Copied the text: " + copyText.value);
+    }
+</script>
 </html>
