--- a/charta/templates/charta/index.html
+++ b/charta/templates/charta/index.html
@@ -37,6 +37,8 @@
                 <div class="input-group">
                     <span class="input-group-text">Enter Weeks:</span>
                     <input class="form-control" id="num_week" name="num_week" type="number" value="4"/>
+                    <input class="form-control" id="month" name="month" type="number" placeholder="Month(number)"/>
+                    <input class="form-control" id="year" name="year" type="number" placeholder="Year(A.D.)"/>
                     <button type="submit" class="btn btn-success" name="run_script">Generate</button>
                 </div>
             </form>
